# prefect-test

./: .env.example  .gitignore  README.md  plan.md  prefect.yaml  pyproject.toml
data_generation/: synth.py
dbt_project/: dbt_project.yml  package-lock.yml  profiles.yml
dbt_project/models/analytics/: mart_branch_performance.sql  mart_customer_ltv.sql  mart_fraud_signals.sql  mart_monthly_customer_summary.sql
dbt_project/models/marts/: _models.yml  dim_accounts.sql  dim_branches.sql  dim_customers.sql  dim_merchants.sql  fct_daily_balances.sql  fct_transactions.sql
dbt_project/models/staging/: _models.yml  stg_accounts.sql  stg_branches.sql  stg_customers.sql  stg_merchants.sql  stg_products.sql  stg_transactions.sql
dbt_project/seeds/: accounts.csv  branches.csv  customers.csv  merchants.csv  products.csv  transactions.csv
flows/: generate_data.py  pipeline.py  run_dbt.py
