[project]
name = "prefect-banking-pipeline"
version = "0.1.0"
description = "Synthetic retail banking pipeline orchestrated with Prefect Cloud, modelled in dbt-duckdb."
requires-python = ">=3.11,<3.14"
dependencies = [
    "prefect>=3.1.0",
    "prefect-dbt>=0.7.0",
    "dbt-core>=1.8.0",
    "dbt-duckdb>=1.8.0",
    "duckdb>=1.0.0",
    "faker>=30.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flows", "data_generation"]
